Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -123,6 +123,56 @@
       ],
       "text/vnd.plotly.v1+html": [
        "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "ac5421b0-cf54-11e9-8924-41002e8006af",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          275,
+          300,
+          700
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "line function",
+         "type": "scatter",
+         "uid": "ac5424ee-cf54-11e9-8924-41002e8006af",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          193.33,
+          253.33,
+          373.33000000000004
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"caaea8c0-1eeb-4e29-9521-7cfcc3e6b9f4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"caaea8c0-1eeb-4e29-9521-7cfcc3e6b9f4\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [100, 200, 400], \"y\": [275, 300, 700], \"type\": \"scatter\", \"uid\": \"ac7a2504-cf54-11e9-8924-41002e8006af\"}, {\"mode\": \"lines\", \"name\": \"line function\", \"x\": [100, 200, 400], \"y\": [193.33, 253.33, 373.33000000000004], \"type\": \"scatter\", \"uid\": \"ac7a26d0-cf54-11e9-8924-41002e8006af\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"caaea8c0-1eeb-4e29-9521-7cfcc3e6b9f4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"caaea8c0-1eeb-4e29-9521-7cfcc3e6b9f4\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [100, 200, 400], \"y\": [275, 300, 700], \"type\": \"scatter\", \"uid\": \"ac7a2504-cf54-11e9-8924-41002e8006af\"}, {\"mode\": \"lines\", \"name\": \"line function\", \"x\": [100, 200, 400], \"y\": [193.33, 253.33, 373.33000000000004], \"type\": \"scatter\", \"uid\": \"ac7a26d0-cf54-11e9-8924-41002e8006af\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -167,7 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    pass"
+    "    "
    ]
   },
   {
