--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    \n",
-    "    "
+    "    return {m}"
    ]
   },
   {
