--- a/index.ipynb
+++ b/index.ipynb
@@ -217,8 +217,8 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rs\n",
-    "    return {'m_values': m_values, 'rss_values': rss_values}"
+    "    rss_value\n",
+    "    return {'m_values': m_values, 'rss_values': rss_value}"
    ]
   },
   {
