--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss_value = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), \n",
+    "    rss_value = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), m_\n",
     "    \n",
     "    return {'m_values': m_values, 'rss_values': rss_value}"
    ]
