Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -633,7 +633,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    if cost_curve_slope > 0:\n",
-    "        m_value "
+    "        next_m = "
    ]
   },
   {
