--- a/index.ipynb
+++ b/index.ipynb
@@ -632,7 +632,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    if cost_curve_slope > 0:\n",
+    "    return\n",
     "        next_m = m + learning_rate * cost_curve_slope"
    ]
   },
