--- a/index.ipynb
+++ b/index.ipynb
@@ -689,7 +689,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    \n",
-    "    return {'m': current_m, ''}"
+    "    return {'m': current_m, 'rss': }"
    ]
   },
   {
