Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,8 +688,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    rss = rs\n",
-    "    return {'m': current_m, 'rss': }"
+    "    rss = rss_values(x_values, y_values, current_m, b)\n",
+    "    return {'m': current_m, 'rss': rss, ''}"
    ]
   },
   {
