Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -689,7 +689,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    rss = rss_values(x_values, y_values, current_m, b)\n",
-    "    return {'m': current_m, 'rss': rss, ''}"
+    "    slope = slope_at()\n",
+    "    return {'m': current_m, 'rss': rss, 'slope': }"
    ]
   },
   {
