--- a/index.ipynb
+++ b/index.ipynb
@@ -689,8 +689,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    rss = rss_values(x_values, y_values, current_m, b)\n",
-    "    slope = slope_at(x_values, y_values, )\n",
-    "    return {'m': current_m, 'rss': rss, 'slope': }"
+    "    slope = slope_at(x_values, y_values, learning_rate, b)\n",
+    "    return list(map{'m': current_m, 'rss': rss, 'slope': }"
    ]
   },
   {
