--- a/index.ipynb
+++ b/index.ipynb
@@ -690,7 +690,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    rss = rss_values(x_values, y_values, current_m, b)\n",
     "    slope = slope_at(x_values, y_values, learning_rate, b)\n",
-    "    return list(map{'m': current_m, 'rss': rss, 'slope': }"
+    "    return list(map(lambda current_m : {'m': current_m, 'rss': rss, 'slope': slope}, "
    ]
   },
   {
