Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -689,7 +689,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
-    "    fori in ran"
+    "    fori in range(steps):\n",
+    "        "
    ]
   },
   {
