--- a/index.ipynb
+++ b/index.ipynb
@@ -690,7 +690,8 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
     "    fori in range(steps):\n",
-    "        rss = rss_values(x_values, y_values, )"
+    "        rss = rss_values(x_values, y_values, current_m, b)\n",
+    "        slope = slope_at"
    ]
   },
   {
