Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -691,7 +691,7 @@
     "    cost_curve = []\n",
     "    fori in range(steps):\n",
     "        rss = rss_values(x_values, y_values, current_m, b)\n",
-    "        slope = slope_at"
+    "        slope = slope_at(x_values, y_values, learning_rate, b)[]"
    ]
   },
   {
