Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -689,9 +689,10 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
-    "    fori in range(steps):\n",
+    "    for i in range(steps):\n",
     "        rss = rss_values(x_values, y_values, current_m, b)\n",
-    "        slope = slope_at(x_values, y_values, learning_rate, b)[]"
+    "        slope = slope_at(x_values, y_values, learning_rate, b)['slope']\n",
+    "        "
    ]
   },
   {
