Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -692,7 +692,7 @@
     "    for i in range(steps):\n",
     "        rss = rss_values(x_values, y_values, current_m, b)\n",
     "        slope = slope_at(x_values, y_values, learning_rate, b)['slope']\n",
-    "        "
+    "        current_m = "
    ]
   },
   {
