Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -692,8 +692,9 @@
     "    for i in range(steps):\n",
     "        rss = rss_values(x_values, y_values, current_m, b)\n",
     "        slope = slope_at(x_values, y_values, learning_rate, b)['slope']\n",
+    "        cost_curve.append({'m': current_m})\n",
     "        current_m = updated_m(current_m, learning_rate, current_cost_slope)\n",
-    "    return i"
+    "    return "
    ]
   },
   {
