Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -690,7 +690,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
     "    for i in range(steps):\n",
-    "        rss = rss_values(x_values, y_values, current_m, b)\n",
+    "        rss = residual_sum_sq(x_values, y_values, current_m, b)\n",
     "        slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "        cost_curve.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
     "        current_m = updated_m(current_m, learning_rate, current_cost_slope)\n",
