--- a/index.ipynb
+++ b/index.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,26 +693,57 @@
     "        rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "        cost_curve.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
-    "        current_m = updated_m(current_m, learning_rate, current_cost_slope)\n",
+    "        current_m = updated_m(current_m, learning_rate, slope)\n",
     "    return cost_curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'current_cost_slope' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-14c83c609b0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdescent_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbudgets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrevenues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m133.33\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m.000001\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurrent_m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdescent_steps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# [{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#  {'m': 0.5483169999998062, 'rss': 131437.9413767516, 'slope': -318023.86000024853},\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-27-9dac640b41ff>\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(x_values, y_values, steps, b, learning_rate, current_m)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mslope\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mslope_at\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurrent_m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'slope'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mcost_curve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'm'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcurrent_m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rss'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'slope'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mslope\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mcurrent_m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mupdated_m\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurrent_cost_slope\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcost_curve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'current_cost_slope' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
+       " {'m': 0.5483169999998062,\n",
+       "  'rss': 131437.9413767516,\n",
+       "  'slope': -318023.86000024853},\n",
+       " {'m': 0.8663408600000547,\n",
+       "  'rss': 51531.31420747324,\n",
+       "  'slope': -184453.83880040026},\n",
+       " {'m': 1.050794698800455,\n",
+       "  'rss': 24649.097944855268,\n",
+       "  'slope': -106983.22650372575},\n",
+       " {'m': 1.1577779253041809,\n",
+       "  'rss': 15604.976802103287,\n",
+       "  'slope': -62050.271372208954},\n",
+       " {'m': 1.2198281966763898,\n",
+       "  'rss': 12561.987166284125,\n",
+       "  'slope': -35989.15739588847},\n",
+       " {'m': 1.2558173540722781,\n",
+       "  'rss': 11538.008028425651,\n",
+       "  'slope': -20873.711289696075},\n",
+       " {'m': 1.2766910653619743,\n",
+       "  'rss': 11193.357340315255,\n",
+       "  'slope': -12106.752547970245},\n",
+       " {'m': 1.2887978179099446,\n",
+       "  'rss': 11077.310067278091,\n",
+       "  'slope': -7021.916477824561},\n",
+       " {'m': 1.295819734387769,\n",
+       "  'rss': 11038.209831325046,\n",
+       "  'slope': -4072.711557128059},\n",
+       " {'m': 1.299892445944897,\n",
+       "  'rss': 11025.020590634533,\n",
+       "  'slope': -2362.172703124088},\n",
+       " {'m': 1.302254618648021,\n",
+       "  'rss': 11020.562895703,\n",
+       "  'slope': -1370.0601677373925}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
